# statsworth

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  RESEARCH.md  pyproject.toml  refactor_plan.md  validate_migration.py
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
stats_core/: __init__.py  visualization.py
stats_core/anova/: __init__.py  manova.py
stats_core/factor_analysis/: __init__.py  efa.py
statsworth/: __init__.py  preprocessing.py  sem.py  visualization.py
statsworth/anova/: __init__.py  manova.py  one_way.py
statsworth/factor_analysis/: __init__.py  efa.py
tests/: conftest.py  test_anova.py  test_efa.py  test_manova.py  test_preprocessing.py  test_sem.py  test_visualization.py
