[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statsworth"
version = "0.1.0"
description = "Unified statistical analysis library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "factor-analyzer>=0.5.1",
    "jinja2",
    "scikit-learn>=1.6,<1.8",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pingouin>=0.5.5",
    "scipy>=1.15.1",
    "seaborn",
    "semopy>=2.3.11",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "mypy>=1.14.1",
    "nbconvert>=7.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=5.0",
    "ruff>=0.9.3",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
