[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statsworth"
version = "0.1.0"
description = "Unified statistical analysis library"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "factor-analyzer>=0.5.1",
    "scikit-learn>=1.6,<1.8",  # factor-analyzer uses removed sklearn 1.8 internal (force_all_finite)
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scipy>=1.15.1",
    "statsmodels>=0.14.4",
]

[project.optional-dependencies]
sem = ["semopy>=2.3.11"]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "mypy>=1.14.1",
    "nbconvert>=7.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=5.0",
    "ruff>=0.9.3",
]

[tool.coverage.run]
relative_files = true
source_pkgs = ["statsworth"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # sklearn internal rename; pinned scikit-learn<1.8 until factor-analyzer is updated
    "ignore:'force_all_finite' was renamed:FutureWarning:sklearn",
    # expected: Agg is a non-interactive backend used in tests
    "ignore:FigureCanvasAgg is non-interactive:UserWarning",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C90", "RUF", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["statsworth"]
